# pycodeseq

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
codeseq/: codeseq.py
javacodeseq/: CodeSeq.java
pycodeseq/: README.md  __init__.py  pycodeseq.py  test_pycodeseq.py
pycodeseq/pycodeseq/: codeseq.py  pycodeseq.py  size_reduce.py
pycodeseq/test_data/: class_example.py  notebook_example.ipynb  notebook_example.tsv
tests/: test_pycodeseq.py
tests/test_data/: class_example_tokens.json  count_levels_example.tsv  notebook_example.tsv  test_count_cells.tsv  test_count_levels.tsv  test_count_tokens.tsv
