[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycodeseq"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "click",
    "nbformat",
    "tqdm",
]

[project.scripts]
pycodeseq = "pycodeseq.pycodeseq:count"

[tool.hatch.version]
path = "pycodeseq/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pycodeseq",
]